Xapian indexer introduced.
Not functional yet, debug commit.

--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-431</y>
         <width>822</width>
-        <height>4517</height>
+        <height>4884</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -433,7 +433,7 @@
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_40">
              <item>
-              <layout class="QVBoxLayout" name="verticalLayout_32">
+              <layout class="QVBoxLayout" name="verticalLayout_17">
                <item>
                 <widget class="QGroupBox" name="groupBox_8">
                  <property name="sizePolicy">
@@ -464,6 +464,13 @@
                    <widget class="QRadioButton" name="radioSearchBaloo5">
                     <property name="text">
                      <string>&amp;Baloo</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioSearchXapian">
+                    <property name="text">
+                     <string>Xapian</string>
                     </property>
                    </widget>
                   </item>
@@ -500,74 +507,185 @@
                  </item>
                 </layout>
                </item>
+               <item>
+                <spacer name="verticalSpacer_3">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
               </layout>
              </item>
              <item>
-              <widget class="QGroupBox" name="groupBox_5">
-               <property name="title">
-                <string>Browser context menu search engines</string>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_12">
-                <item>
-                 <widget class="QListWidget" name="listSearch">
-                  <property name="selectionMode">
-                   <enum>QAbstractItemView::ExtendedSelection</enum>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <layout class="QHBoxLayout" name="horizontalLayout_21">
+              <layout class="QVBoxLayout" name="verticalLayout_21">
+               <item>
+                <widget class="QGroupBox" name="groupBox_5">
+                 <property name="title">
+                  <string>Browser context menu search engines</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_12">
                   <item>
-                   <widget class="QPushButton" name="buttonAddSearch">
-                    <property name="text">
-                     <string>Add...</string>
+                   <widget class="QListWidget" name="listSearch">
+                    <property name="selectionMode">
+                     <enum>QAbstractItemView::ExtendedSelection</enum>
                     </property>
                    </widget>
                   </item>
                   <item>
-                   <spacer name="horizontalSpacer_8">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="buttonDefaultSearch">
-                    <property name="text">
-                     <string>Use by default</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <spacer name="horizontalSpacer_5">
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="sizeHint" stdset="0">
-                     <size>
-                      <width>40</width>
-                      <height>20</height>
-                     </size>
-                    </property>
-                   </spacer>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="buttonDelSearch">
-                    <property name="text">
-                     <string>Delete</string>
-                    </property>
-                   </widget>
+                   <layout class="QHBoxLayout" name="horizontalLayout_21">
+                    <item>
+                     <widget class="QPushButton" name="buttonAddSearch">
+                      <property name="text">
+                       <string>Add...</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <spacer name="horizontalSpacer_8">
+                      <property name="orientation">
+                       <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="buttonDefaultSearch">
+                      <property name="text">
+                       <string>Use by default</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <spacer name="horizontalSpacer_5">
+                      <property name="orientation">
+                       <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="buttonDelSearch">
+                      <property name="text">
+                       <string>Delete</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
                   </item>
                  </layout>
-                </item>
-               </layout>
-              </widget>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_25">
+                 <property name="title">
+                  <string>Xapian settings</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_25">
+                  <item>
+                   <layout class="QFormLayout" name="formLayout_10">
+                    <item row="0" column="0">
+                     <widget class="QLabel" name="label_44">
+                      <property name="text">
+                       <string>Stemmer language</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>comboXapianStemmerLang</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QComboBox" name="comboXapianStemmerLang"/>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QLabel" name="label_45">
+                      <property name="text">
+                       <string>Indexer start delay</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinXapianStartDelay</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="1">
+                     <widget class="QSpinBox" name="spinXapianStartDelay">
+                      <property name="suffix">
+                       <string> sec</string>
+                      </property>
+                      <property name="maximum">
+                       <number>9999</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_24">
+                    <item>
+                     <widget class="QLabel" name="label_46">
+                      <property name="text">
+                       <string>Indexed directories</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>listXapianIndexDirs</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QListWidget" name="listXapianIndexDirs"/>
+                    </item>
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_42">
+                      <item>
+                       <widget class="QPushButton" name="buttonXapianAddDir">
+                        <property name="text">
+                         <string>Add...</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <spacer name="horizontalSpacer_13">
+                        <property name="orientation">
+                         <enum>Qt::Horizontal</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>40</width>
+                          <height>20</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                      <item>
+                       <widget class="QPushButton" name="buttonXapianDelDir">
+                        <property name="text">
+                         <string>Delete</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+              </layout>
              </item>
             </layout>
            </widget>
@@ -2233,11 +2351,17 @@
   <tabstop>radioSearchNone</tabstop>
   <tabstop>radioSearchRecoll</tabstop>
   <tabstop>radioSearchBaloo5</tabstop>
+  <tabstop>radioSearchXapian</tabstop>
   <tabstop>spinMaxLimit</tabstop>
   <tabstop>listSearch</tabstop>
   <tabstop>buttonAddSearch</tabstop>
   <tabstop>buttonDefaultSearch</tabstop>
   <tabstop>buttonDelSearch</tabstop>
+  <tabstop>comboXapianStemmerLang</tabstop>
+  <tabstop>spinXapianStartDelay</tabstop>
+  <tabstop>listXapianIndexDirs</tabstop>
+  <tabstop>buttonXapianAddDir</tabstop>
+  <tabstop>buttonXapianDelDir</tabstop>
   <tabstop>radioAtlas</tabstop>
   <tabstop>radioBingAPI</tabstop>
   <tabstop>radioYandexAPI</tabstop>
