--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,7 +26,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-1142</y>
         <width>822</width>
         <height>4884</height>
        </rect>
@@ -792,6 +792,42 @@
                      <widget class="QSpinBox" name="tranRetryCnt">
                       <property name="minimum">
                        <number>1</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_26">
+                 <property name="title">
+                  <string>DOM Worker</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_28">
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_43">
+                    <item>
+                     <widget class="QLabel" name="label_47">
+                      <property name="text">
+                       <string>Timeout</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>domWorkerRetryTimeoutSec</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="domWorkerRetryTimeoutSec">
+                      <property name="suffix">
+                       <string> sec</string>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>999</number>
                       </property>
                      </widget>
                     </item>
@@ -2379,6 +2415,7 @@
   <tabstop>radioAliCloud</tabstop>
   <tabstop>radioDeeplFree</tabstop>
   <tabstop>tranRetryCnt</tabstop>
+  <tabstop>domWorkerRetryTimeoutSec</tabstop>
   <tabstop>checkTranslatorCacheEnabled</tabstop>
   <tabstop>spinTranslatorCacheSize</tabstop>
   <tabstop>gctxHotkey</tabstop>
