--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1142</y>
+        <y>-1622</y>
         <width>822</width>
-        <height>4884</height>
+        <height>5131</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -64,7 +64,7 @@
         <widget class="QWidget" name="widget" native="true">
          <layout class="QVBoxLayout" name="verticalLayout_15">
           <property name="spacing">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -1290,6 +1290,423 @@
            </widget>
           </item>
           <item>
+           <widget class="QGroupBox" name="groupBoxManga">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>Manga viewer</string>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_47">
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_31">
+               <item>
+                <widget class="QGroupBox" name="groupBox_29">
+                 <property name="title">
+                  <string>General</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_30">
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_45">
+                    <item>
+                     <widget class="QLabel" name="label_51">
+                      <property name="text">
+                       <string>Main background</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QFrame" name="frameMangaBkColor">
+                      <property name="autoFillBackground">
+                       <bool>true</bool>
+                      </property>
+                      <property name="frameShape">
+                       <enum>QFrame::Panel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Sunken</enum>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="buttonMangaBkColor">
+                      <property name="text">
+                       <string>Color...</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_46">
+                    <item>
+                     <widget class="QLabel" name="label_50">
+                      <property name="text">
+                       <string>Cache width</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinMangaCacheWidth</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="spinMangaCacheWidth">
+                      <property name="sizePolicy">
+                       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                        <horstretch>0</horstretch>
+                        <verstretch>0</verstretch>
+                       </sizepolicy>
+                      </property>
+                      <property name="suffix">
+                       <string> pages</string>
+                      </property>
+                      <property name="minimum">
+                       <number>2</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_27">
+                 <property name="title">
+                  <string>Page scrolling</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_29">
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_44">
+                    <item>
+                     <widget class="QLabel" name="label_48">
+                      <property name="text">
+                       <string>Degrees per page</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinMangaScrollDelta</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="spinMangaScrollDelta">
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>10000</number>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_49">
+                      <property name="text">
+                       <string>Scroll factor</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinMangaScrollFactor</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="spinMangaScrollFactor">
+                      <property name="toolTip">
+                       <string>Multiplication factor for page navigation while zoomed in</string>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>100</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="labelMangaDetectedDelta">
+                    <property name="text">
+                     <string>TextLabel</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox_28">
+               <property name="title">
+                <string>Rendering</string>
+               </property>
+               <layout class="QFormLayout" name="formLayout_11">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="labelUpscaleFilter">
+                  <property name="text">
+                   <string>Upscale filter</string>
+                  </property>
+                  <property name="buddy">
+                   <cstring>comboMangaUpscaleFilter</cstring>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="QComboBox" name="comboMangaUpscaleFilter">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <item>
+                   <property name="text">
+                    <string>Nearest</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Bilinear</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Point</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Box</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Triangle</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hermite</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hanning</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hamming</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Blackman</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Gaussian</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Quadratic</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Cubic</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Catrom</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Mitchell</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Lanczos</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Bessel</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="labelDownscaleFilter">
+                  <property name="text">
+                   <string>Downscale filter</string>
+                  </property>
+                  <property name="buddy">
+                   <cstring>comboMangaDownscaleFilter</cstring>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="1">
+                 <widget class="QComboBox" name="comboMangaDownscaleFilter">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <item>
+                   <property name="text">
+                    <string>Nearest</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Bilinear</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Point</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Box</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Triangle</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hermite</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hanning</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Hamming</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Blackman</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Gaussian</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Quadratic</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Cubic</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Catrom</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Mitchell</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Lanczos</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>Bessel</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QLabel" name="labelResizingBlur">
+                  <property name="text">
+                   <string>Resizing blur</string>
+                  </property>
+                  <property name="buddy">
+                   <cstring>spinMangaBlur</cstring>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="1">
+                 <widget class="QDoubleSpinBox" name="spinMangaBlur">
+                  <property name="minimum">
+                   <double>0.010000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QLabel" name="labelMagnifierSize">
+                  <property name="text">
+                   <string>Magnifier size</string>
+                  </property>
+                  <property name="buddy">
+                   <cstring>spinMangaMagnify</cstring>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="1">
+                 <widget class="QSpinBox" name="spinMangaMagnify">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="minimum">
+                   <number>5</number>
+                  </property>
+                  <property name="maximum">
+                   <number>1000</number>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="1">
+                 <widget class="QCheckBox" name="checkMangaFineRendering">
+                  <property name="text">
+                   <string>Use fine postrendering</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
            <widget class="QGroupBox" name="groupBoxDictionary">
             <property name="title">
              <string>Local dictionary</string>
@@ -2437,6 +2854,15 @@
   <tabstop>editAliAccessKeyID</tabstop>
   <tabstop>editAliAccessKeySecret</tabstop>
   <tabstop>comboAliMode</tabstop>
+  <tabstop>buttonMangaBkColor</tabstop>
+  <tabstop>spinMangaCacheWidth</tabstop>
+  <tabstop>spinMangaScrollDelta</tabstop>
+  <tabstop>spinMangaScrollFactor</tabstop>
+  <tabstop>comboMangaUpscaleFilter</tabstop>
+  <tabstop>comboMangaDownscaleFilter</tabstop>
+  <tabstop>spinMangaBlur</tabstop>
+  <tabstop>spinMangaMagnify</tabstop>
+  <tabstop>checkMangaFineRendering</tabstop>
   <tabstop>listDictPaths</tabstop>
   <tabstop>buttonAddDictPath</tabstop>
   <tabstop>buttonDelDictPath</tabstop>
