--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1622</y>
+        <y>-1870</y>
         <width>822</width>
-        <height>5131</height>
+        <height>5159</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -1308,16 +1308,16 @@
                  <property name="title">
                   <string>General</string>
                  </property>
-                 <layout class="QVBoxLayout" name="verticalLayout_30">
-                  <item>
+                 <layout class="QFormLayout" name="formLayout_12">
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_51">
+                    <property name="text">
+                     <string>Main background</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="1">
                    <layout class="QHBoxLayout" name="horizontalLayout_45">
-                    <item>
-                     <widget class="QLabel" name="label_51">
-                      <property name="text">
-                       <string>Main background</string>
-                      </property>
-                     </widget>
-                    </item>
                     <item>
                      <widget class="QFrame" name="frameMangaBkColor">
                       <property name="autoFillBackground">
@@ -1340,35 +1340,60 @@
                     </item>
                    </layout>
                   </item>
-                  <item>
-                   <layout class="QHBoxLayout" name="horizontalLayout_46">
+                  <item row="1" column="0">
+                   <widget class="QLabel" name="label_50">
+                    <property name="text">
+                     <string>Cache width</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinMangaCacheWidth</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="1" column="1">
+                   <widget class="QSpinBox" name="spinMangaCacheWidth">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="suffix">
+                     <string> pages</string>
+                    </property>
+                    <property name="minimum">
+                     <number>2</number>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="0">
+                   <widget class="QLabel" name="label_52">
+                    <property name="text">
+                     <string>Pixiv manga page size</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>comboPixivMangaPageSize</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="1">
+                   <widget class="QComboBox" name="comboPixivMangaPageSize">
                     <item>
-                     <widget class="QLabel" name="label_50">
-                      <property name="text">
-                       <string>Cache width</string>
-                      </property>
-                      <property name="buddy">
-                       <cstring>spinMangaCacheWidth</cstring>
-                      </property>
-                     </widget>
+                     <property name="text">
+                      <string>Small</string>
+                     </property>
                     </item>
                     <item>
-                     <widget class="QSpinBox" name="spinMangaCacheWidth">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
-                      <property name="suffix">
-                       <string> pages</string>
-                      </property>
-                      <property name="minimum">
-                       <number>2</number>
-                      </property>
-                     </widget>
+                     <property name="text">
+                      <string>Regular</string>
+                     </property>
                     </item>
-                   </layout>
+                    <item>
+                     <property name="text">
+                      <string>Original</string>
+                     </property>
+                    </item>
+                   </widget>
                   </item>
                  </layout>
                 </widget>
@@ -2856,6 +2881,7 @@
   <tabstop>comboAliMode</tabstop>
   <tabstop>buttonMangaBkColor</tabstop>
   <tabstop>spinMangaCacheWidth</tabstop>
+  <tabstop>comboPixivMangaPageSize</tabstop>
   <tabstop>spinMangaScrollDelta</tabstop>
   <tabstop>spinMangaScrollFactor</tabstop>
   <tabstop>comboMangaUpscaleFilter</tabstop>
