--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-1665</y>
         <width>822</width>
-        <height>5159</height>
+        <height>5266</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -774,6 +774,13 @@
                     </property>
                    </widget>
                   </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioPromtNmtAPI">
+                    <property name="text">
+                     <string>PROMT NMT Cloud</string>
+                    </property>
+                   </widget>
+                  </item>
                  </layout>
                 </widget>
                </item>
@@ -1287,6 +1294,49 @@
                   </item>
                   <item row="2" column="1">
                    <widget class="QComboBox" name="comboAliMode"/>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_30">
+                 <property name="title">
+                  <string>Promt NMT Cloud</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_30">
+                  <item>
+                   <layout class="QFormLayout" name="formLayout_13">
+                    <item row="0" column="0">
+                     <widget class="QLabel" name="label_53">
+                      <property name="text">
+                       <string>NMT Server</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>editPromtNmtServer</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QLineEdit" name="editPromtNmtServer"/>
+                    </item>
+                   </layout>
+                  </item>
+                  <item>
+                   <layout class="QFormLayout" name="formLayout_14">
+                    <item row="0" column="0">
+                     <widget class="QLabel" name="label_54">
+                      <property name="text">
+                       <string>Client &amp;key</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>editPromtNmtAPIKey</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QLineEdit" name="editPromtNmtAPIKey"/>
+                    </item>
+                   </layout>
                   </item>
                  </layout>
                 </widget>
@@ -2864,6 +2914,7 @@
   <tabstop>radioAliCloud</tabstop>
   <tabstop>radioDeeplFree</tabstop>
   <tabstop>radioPromtOneFree</tabstop>
+  <tabstop>radioPromtNmtAPI</tabstop>
   <tabstop>tranRetryCnt</tabstop>
   <tabstop>domWorkerRetryTimeoutSec</tabstop>
   <tabstop>checkTranslatorCacheEnabled</tabstop>
@@ -2887,6 +2938,8 @@
   <tabstop>editAliAccessKeyID</tabstop>
   <tabstop>editAliAccessKeySecret</tabstop>
   <tabstop>comboAliMode</tabstop>
+  <tabstop>editPromtNmtServer</tabstop>
+  <tabstop>editPromtNmtAPIKey</tabstop>
   <tabstop>buttonMangaBkColor</tabstop>
   <tabstop>spinMangaCacheWidth</tabstop>
   <tabstop>comboPixivMangaPageSize</tabstop>
