Filter completer and tag list for pixiv index tab.

--- a/utils/pixivindextab.ui
+++ b/utils/pixivindextab.ui
@@ -146,7 +146,17 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="editFilter"/>
+       <widget class="QComboBox" name="editFilter">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
