--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1665</y>
+        <y>-1716</y>
         <width>822</width>
-        <height>5266</height>
+        <height>5429</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -781,6 +781,13 @@
                     </property>
                    </widget>
                   </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioDeeplAPI">
+                    <property name="text">
+                     <string>DeepL API</string>
+                    </property>
+                   </widget>
+                  </item>
                  </layout>
                 </widget>
                </item>
@@ -1337,6 +1344,67 @@
                      <widget class="QLineEdit" name="editPromtNmtAPIKey"/>
                     </item>
                    </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_31">
+                 <property name="title">
+                  <string>DeepL API</string>
+                 </property>
+                 <layout class="QFormLayout" name="formLayout_15">
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_55">
+                    <property name="text">
+                     <string>API Key</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>editDeeplAPIKey</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="1">
+                   <widget class="QLineEdit" name="editDeeplAPIKey"/>
+                  </item>
+                  <item row="1" column="0">
+                   <widget class="QLabel" name="label_56">
+                    <property name="text">
+                     <string>Mode</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>comboDeeplAPIMode</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="1" column="1">
+                   <widget class="QComboBox" name="comboDeeplAPIMode"/>
+                  </item>
+                  <item row="2" column="0">
+                   <widget class="QLabel" name="label_57">
+                    <property name="text">
+                     <string>Split sentences</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>comboDeeplAPISplitSentences</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="1">
+                   <widget class="QComboBox" name="comboDeeplAPISplitSentences"/>
+                  </item>
+                  <item row="3" column="0">
+                   <widget class="QLabel" name="label_58">
+                    <property name="text">
+                     <string>Formality</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>comboDeeplAPIFormality</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="3" column="1">
+                   <widget class="QComboBox" name="comboDeeplAPIFormality"/>
                   </item>
                  </layout>
                 </widget>
@@ -2915,6 +2983,7 @@
   <tabstop>radioDeeplFree</tabstop>
   <tabstop>radioPromtOneFree</tabstop>
   <tabstop>radioPromtNmtAPI</tabstop>
+  <tabstop>radioDeeplAPI</tabstop>
   <tabstop>tranRetryCnt</tabstop>
   <tabstop>domWorkerRetryTimeoutSec</tabstop>
   <tabstop>checkTranslatorCacheEnabled</tabstop>
@@ -2940,6 +3009,10 @@
   <tabstop>comboAliMode</tabstop>
   <tabstop>editPromtNmtServer</tabstop>
   <tabstop>editPromtNmtAPIKey</tabstop>
+  <tabstop>editDeeplAPIKey</tabstop>
+  <tabstop>comboDeeplAPIMode</tabstop>
+  <tabstop>comboDeeplAPISplitSentences</tabstop>
+  <tabstop>comboDeeplAPIFormality</tabstop>
   <tabstop>buttonMangaBkColor</tabstop>
   <tabstop>spinMangaCacheWidth</tabstop>
   <tabstop>comboPixivMangaPageSize</tabstop>
