Focus policy for manga view tab.

--- a/manga/mangaviewtab.ui
+++ b/manga/mangaviewtab.ui
@@ -639,6 +639,9 @@
         <height>380</height>
        </rect>
       </property>
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
      </widget>
     </widget>
    </item>
