Subsentences and paragraph combining mode.
For better interaction with AI translation tools.

--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -26,7 +26,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1977</y>
+        <y>-1601</y>
         <width>822</width>
         <height>5600</height>
        </rect>
@@ -927,6 +927,42 @@
                     </item>
                     <item>
                      <widget class="QKeySequenceEdit" name="gctxHotkey"/>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_33">
+                 <property name="title">
+                  <string>Subsentences combine mode</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_43">
+                  <item>
+                   <layout class="QFormLayout" name="formLayout_19">
+                    <item row="0" column="0">
+                     <widget class="QLabel" name="label_65">
+                      <property name="text">
+                       <string>Max tokens count</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinTokensMaxCountCombined</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QSpinBox" name="spinTokensMaxCountCombined">
+                      <property name="minimum">
+                       <number>5</number>
+                      </property>
+                      <property name="maximum">
+                       <number>4096</number>
+                      </property>
+                      <property name="singleStep">
+                       <number>10</number>
+                      </property>
+                     </widget>
                     </item>
                    </layout>
                   </item>
@@ -3159,6 +3195,7 @@
   <tabstop>checkTranslatorCacheEnabled</tabstop>
   <tabstop>spinTranslatorCacheSize</tabstop>
   <tabstop>gctxHotkey</tabstop>
+  <tabstop>spinTokensMaxCountCombined</tabstop>
   <tabstop>atlHost</tabstop>
   <tabstop>atlPort</tabstop>
   <tabstop>atlToken</tabstop>
